--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,29 +7,30 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  dio: ^4.0.0
   equatable: ^2.0.3
-  freezed: ^0.14.2
   flutter_bloc: ^7.0.1
-  retrofit: ^2.0.1
-  json_serializable: ^4.1.4
+  retrofit: ^1.3.4+1
   intl_phone_number_input: 0.7.0+2
   pin_code_fields: ^7.2.0
   shared_preferences: ^2.0.6
   synchronized: ^3.0.0
   infinite_scroll_pagination: ^3.1.0
 
+  flutter_hooks: ^0.15.0
+  get_it: ^5.0.3
+  ionicons: ^0.0.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: any
-  retrofit_generator: any
+  build_runner: ^1.10.11
+  retrofit_generator: ^1.4.1
 
 flutter:
 
